--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .ipynb_checkpoints/
 ### Example user template template
 ### Example user template
-
+*.sqlite
+*.sqlite*
 # IntelliJ project files
 .idea
 *.iml
